# parallels-desktop-rs

./: CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/platform/macos/: input.rs  metal_view.rs  mod.rs
src-tauri/src/plugin/: commands.rs  events.rs  state.rs
src-tauri/src/vm/: config.rs  manager.rs  mod.rs  snapshot.rs
src-tauri/src/vm/qemu/: command_builder.rs  mod.rs  qmp_client.rs  tpm.rs  windows11.rs
