[package]
name = "parallels-desktop-rs"
version = "0.1.0"
description = "Parallels Desktop-like VM manager for Apple Silicon"
authors = ["hojas"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
toml = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Platform directories
dirs = "5"
libc = "0.2"

# macOS native interop (graphical display)
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-metal = "0.3"
objc2-metal-kit = "0.3"
objc2-foundation = "0.3"
metal = "0.29"
